--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Pt.js is super cool</title>
-        <script type="text/javascript" src="/nodemodules/pts/dist/pts.min.js"></script>
+        <!--script type="text/javascript" src="https://cdn.jsdelivr.net/gh/williamngan/pts/dist/pts.js"></script-->
         <script type="text/javascript" src="actualscript.js"></script>
     </head>
     <body>
